Task2: Update Property working changes